# velocity-fucker

netherite-rs/netherite/: Cargo.toml
netherite-rs/netherite/src/: codec.rs  codec.rs.wip  lib.rs  varint.rs
netherite-rs/netherite/src/codec/: compressed.rs  error.rs  test.rs  uncompressed.rs
netherite-rs/netherite/src/encoding/: str.rs
netherite-rs/netherite/tests/: codec.rs
velocity-fuck/: Cargo.toml
velocity-fuck/src/: main.rs
